# orvcli

./: CHANGELOG.md  README.md  main.py  orvcli.py  pyproject.toml
open_rack_vent/: web_interface.py
open_rack_vent/control_api/: mqtt_api.py
open_rack_vent/host_hardware/: __init__.py  board_interface_types.py  board_markings.py
open_rack_vent/host_hardware/interfaces/: beaglebone_black.py
tools/: create_venv.sh
