[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
extra_standard_library = "setuptools,typing_extensions"
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
skip = ["/home/circleci/repo/venv", "./venv", "./.venv"]
use_parentheses = true

[tool.mypy]
plugins = ['pydantic.mypy']
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ".:test:open_rack_vent"
no_implicit_optional = true
scripts_are_modules = true
strict_optional = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Devon Bray"]
description = "Control fans, read temperature sensors and manage the airflow inside of a server rack."
name = "open_rack_vent"
readme = "README.md"
version = "0.3.2"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.12.4"
bonus-click = "^0.1.0"
click = "^8.3.1"
apscheduler = "^3.11.1"
paho-mqtt = "^2.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
wheel = "^0.38"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
addopts = "-rsxX --showlocals --strict-markers"

[tool.pytest.ini_options.markers]
devtest = "temporary development mark that can be used as needed (should not be merged to master)"
integration = "tests that access outside services (s3, APIs), don't run in CircleCI"
timeout = "timeout for test in seconds, from `pytest-timeout` module"
